# telemed_api

./: .gitignore  pyproject.toml
app/: crud.py  dependencies.py  exceptions.py  main.py  models.py  schemas.py
app/infra/: db.py
app/routes/: auth.py  medico.py  usuario.py
