[project]
name = "telemed-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "psycopg>=3.2.3",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "pytest>=8.3.4",
    "sqlalchemy>=2.0.36",
    "sqlmodel>=0.0.22",
]
